argocd-ingress-grpc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-grpc-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: argocd-server
            port: 
             number: 443
    host: <hostname>
  tls:
  - hosts:
    - <hostname>
    secretName: argocd-secret # do not change, this is provided by Argo CD
